test/domains/sungeun/assoc/interior.1.good
interior.chpl:4: In function 'my_interior':
interior.chpl:5: error: interior not supported on associative domains
interior.chpl:11: Function 'my_interior' instantiated as: my_interior(D: DefaultAssociativeDom(int(64),true), off: int(64))
